--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,8 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Seite nicht gefunden"
+excerpt: "Seite existiert nicht."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Es tut uns leid, aber die Seite, die du gesucht hast, scheint nicht zu existieren.
